# edith

./: .SRCINFO  .codacy.yml  .gitignore  PKGBUILD  PKGBUILD.local  README.md  meson.build  pyproject.toml  release.sh
data/: com.github.edith.desktop.in  de.singular.edith.desktop.in  meson.build
edith/: __init__.py  __init__.py.in  __main__.py  application.py  meson.build  monaco_languages.py  window.py
edith/data/: README.md  de.singular.edith.gresource.xml
edith/data/icons/hicolor/: index.theme
edith/data/monaco/: bridge.js  editor.html
edith/data/styles/: railscasts.xml
edith/models/: meson.build  open_file.py  remote_file.py  server.py
edith/services/: async_worker.py  config.py  credential_store.py  drag_export.py  external_edit.py  file_associations.py  filezilla_import.py  ftp_client.py  meson.build  sftp_client.py  temp_manager.py  transfer_queue.py
edith/widgets/: connect_dialog.py  editor_page.py  editor_panel.py  editor_settings_dialog.py  file_browser.py  file_dialogs.py  file_row.py  folder_row.py  font_chooser_dialog.py  image_viewer.py  meson.build  monaco_editor.py  path_bar.py  preferences_dialog.py  server_edit_dialog.py  server_list.py  server_panel.py  server_row.py  status_bar.py  syntax_associations_dialog.py  theme_chooser_dialog.py  transfer_panel.py  welcome_view.py
scripts/: fetch-monaco.sh
