services_sources = [
  '__init__.py',
  'async_worker.py',
  'config.py',
  'credential_store.py',
  'external_edit.py',
  'file_associations.py',
  'filezilla_import.py',
  'ftp_client.py',
  'sftp_client.py',
  'temp_manager.py',
  'transfer_queue.py',
]

install_data(services_sources, install_dir: moduledir / 'services')
