widgets_sources = [
  '__init__.py',
  'connect_dialog.py',
  'editor_page.py',
  'editor_panel.py',
  'file_browser.py',
  'file_dialogs.py',
  'file_row.py',
  'folder_row.py',
  'font_chooser_dialog.py',
  'server_edit_dialog.py',
  'server_list.py',
  'server_row.py',
  'status_bar.py',
  'theme_chooser_dialog.py',
  'welcome_view.py',
]

install_data(widgets_sources, install_dir: moduledir / 'widgets')
